--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,27 @@
   padding: 0;
 }
 
-/* .MuiButtonBase-root .MuiChip-label .MuiSvgIcon-root{
-  color: purple
-} */
+@keyframes shake {
+  0% {
+    transform: translateX(0);
+  }
+  20% {
+    transform: translateX(-5px);
+  }
+  40% {
+    transform: translateX(5px);
+  }
+  60% {
+    transform: translateX(-5px);
+  }
+  80% {
+    transform: translateX(5px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.shake {
+  animation: shake 0.5s ease-in-out;
+}
